testsuite/tests/builtins/pattern_methods/is_match/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(p.is_match())
   │       ──────┬─────  
   │             ╰─────── Missing value for the "haystack" parameter
───╯
